--- a/src/Css-Pages/HomeCard.css
+++ b/src/Css-Pages/HomeCard.css
@@ -51,11 +51,16 @@
   font-size: 20px;
   line-height: 1;
   opacity: 0.75;
-  color: var(--button-hover) !important;
+  color: var(red) !important;
   -webkit-font-smoothing: antialiased;
 
   -moz-osx-font-smoothing: grayscale;
 }
+
+.custom-modal {
+  max-width: 140vh !important;
+}
+
 /* 
   //////////////////                  */
 
