--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
 
 #root {
   overflow-x: hidden;
   --bgColor: #93aabf4d;
-  --borderBottom:  #93aabf4d;
-  --bs-box-shadow-md: 0 1rem 3rem  #93aabf4d;
-  --button-hover:#7fafcb;
+  --borderBottom: #93aabf4d;
+  --bs-box-shadow-md: 0 1rem 3rem #93aabf4d;
+  --button-hover: #7fafcb;
+  --bg-lite-clr: #daebf2;
 }
