ShopByCategory zoom out hover fixed bug

--- a/src/Css-Pages/HomeCard.css
+++ b/src/Css-Pages/HomeCard.css
@@ -293,6 +293,11 @@ hr {
   padding: 0 10px;
 }
 
+/* shop by catergories */
+.card-container {
+  transition: transform 0.3s ease-in-out;
+}
 
-
-
+.card-container:hover {
+  transform: scale(0.9); 
+}
