--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,10 @@
 #root {
   overflow-x: hidden;
   --bgColor: #93aabf4d;
+  /* --bgColor: #deb887; */
   --borderBottom: #93aabf4d;
   --bs-box-shadow-md: 0 1rem 3rem #93aabf4d;
   --button-hover: #7fafcb;
+
   --bg-lite-clr: #daebf2;
 }
