--- a/src/Css-Pages/wallBackground.css
+++ b/src/Css-Pages/wallBackground.css
@@ -1,29 +1,34 @@
 .modern-image-card {
-    position: relative;
-    overflow: hidden;
-    border-radius: 8px;
-  }
-  
-  .modern-image {
-    width: 100%;
-    height: 300px;
-    border-radius: 8px;
-  }
-  
-  .chair-cnt {
-   
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* background:#93aabf4d; */
-    background-color: var(--bgColor);
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .image-card:hover .chair-cnt {
-    opacity: 1;
-  }
-  
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.modern-image {
+  width: 100%;
+  height: 300px;
+  border-radius: 8px;
+}
+
+.chair-cnt {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background:#93aabf4d; */
+  background-color: var(--bgColor);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.image-card:hover .chair-cnt {
+  opacity: 1;
+}
+
+.threeSixtyDegreePic:hover {
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg); /* Ensure standard rotation */
+  transition: transform 0.5s ease-in-out; /* Smooth animation */
+  height: "7vh";
+}
