--- a/src/Css-Pages/wallBackground.css
+++ b/src/Css-Pages/wallBackground.css
@@ -26,9 +26,9 @@
   opacity: 1;
 }
 
-.threeSixtyDegreePic:hover {
+/* .threeSixtyDegreePic:hover {
   -webkit-transform: rotate(360deg);
-  transform: rotate(360deg); /* Ensure standard rotation */
-  transition: transform 0.5s ease-in-out; /* Smooth animation */
-  height: "7vh";
-}
+  transform: rotate(360deg);
+  transition: transform 0.5s ease-in-out;
+  height: "1vh";
+} */
