--- a/src/Css-Pages/HomeCard.css
+++ b/src/Css-Pages/HomeCard.css
@@ -264,10 +264,10 @@ hr {
 
 
 .profile-pic {
-  width: 80px;
-  height: 80px;
+  width: 150px;
+  height: 90px;
   border-radius: 70%;
-  border: 3px solid rgb(118, 197, 228);
+  /* border: 3px solid rgb(118, 197, 228); */
   box-shadow: 0 0 10px rgba(123, 213, 224, 0.2); 
 }
 
