--- a/src/Css-Pages/HomeCard.css
+++ b/src/Css-Pages/HomeCard.css
@@ -12,6 +12,7 @@
   position: relative;
   margin-left: 28vh;
 }
+
 .chair-card {
   float: left;
   background-color: gainsboro;
@@ -236,18 +237,21 @@ hr {
 
 
 .custom-card {
-  color: black;
+  color: rgb(82, 182, 212);
+  background: linear-gradient(#93aabf4d, white);
   text-align: justify;
   padding: 20px;
   border-radius: 25px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   overflow: hidden;
   position: relative;
-  min-height: 300px; 
+  min-height: 300px;
   margin-bottom: 40px;
   margin-top: 10px;
   /* opacity: 0.8; */
 }
+
+
 
 
 .custom-card:hover {
@@ -260,18 +264,19 @@ hr {
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
+
 }
 
 
 .profile-pic {
   width: 150px;
-  height: 90px;
-  border-radius: 70%;
-  /* border: 3px solid rgb(118, 197, 228); */
-  box-shadow: 0 0 10px rgba(123, 213, 224, 0.2); 
+  height: 100px;
+  border-radius: 100%;
+  color: #93aabf4d;
+  box-shadow: 0 0 10px rgba(123, 213, 224, 0.2);
 }
 
-.profile-pic:hover{
+.profile-pic:hover {
   transform: scale(1.05);
   box-shadow: 0 8px 30px rgba(50, 194, 182, 0.15);
 }
@@ -299,5 +304,15 @@ hr {
 }
 
 .card-container:hover {
-  transform: scale(0.9); 
+  transform: scale(0.9);
+}
+
+.custom-rate {
+  opacity: 0.5;
+  transition: opacity 0.3s ease-in-out;
+  margin-left: 70px;
+}
+
+.custom-rate:hover {
+  opacity: 1;
 }
