--- a/src/Css-Pages/wallBackground.css
+++ b/src/Css-Pages/wallBackground.css
@@ -32,3 +32,9 @@
   transition: transform 0.5s ease-in-out;
   height: "1vh";
 } */
+
+/* footer page CSS */
+
+.address-detail {
+  margin-bottom: 8px !important;
+}
