--- a/src/Css-Pages/Navbr.css
+++ b/src/Css-Pages/Navbr.css
@@ -53,7 +53,7 @@
   text-decoration: none;
   color: #333;
   font-size: small;
-  font-size: 16px !important;
+  font-size: 14px !important; /* font size for submenu */
   font-size: large;
   padding-left: -0px !important;
   margin-left: 8px;
@@ -65,9 +65,22 @@
 }
 
 .matress-item {
-  transform: translate(-8%);
+  transform: translate(-15%);
 }
 
+.Beds-Boards {
+  padding: 0px !important;
+}
+
+.Sofa-recliners {
+  transform: translate(-32%);
+}
+.Pillows-Cushions {
+  transform: translate(-19%);
+}
+.Beddings {
+  transform: translate(-56%);
+}
 @media (max-width: 1024px) {
   .matress-item {
     transform: translate(0) !important;
