--- a/src/Css-Pages/wallBackground.css
+++ b/src/Css-Pages/wallBackground.css
@@ -38,3 +38,11 @@
 .address-detail {
   margin-bottom: 8px !important;
 }
+
+.eLVJKp:before {
+  background: rgb(44 39 38 / 50%) !important;
+}
+
+:where(.css-dev-only-do-not-override-11lehqq) a:hover {
+  color: beige !important;
+}
