change hover color in features products

--- a/src/Css-Pages/wallBackground.css
+++ b/src/Css-Pages/wallBackground.css
@@ -40,7 +40,7 @@
 }
 
 .eLVJKp:before {
-  background: rgb(44 39 38 / 50%) !important;
+  background: rgb(179 156 193) !important;
 }
 
 :where(.css-dev-only-do-not-override-11lehqq) a:hover {
