--- a/src/Css-Pages/HomeCard.css
+++ b/src/Css-Pages/HomeCard.css
@@ -345,22 +345,32 @@ hr {
 
 /*product details img css/*
 /* Basic styling for album thumbnails */
-.image-album .album-thumbnail {
+/* .image-album .album-thumbnail {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   border-radius: 5px;
   cursor: pointer;
-}
+} */
 
 /* Hover effect */
-.image-album .album-thumbnail:hover {
+/* .image-album .album-thumbnail:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
-}
+} */
 
 /* Styling for active thumbnail */
-.image-album .album-thumbnail.active {
+/* .image-album .album-thumbnail.active {
   border: 2px solid #007bff;
   transform: scale(1.05);
 
 }
+
+
+.d-flex.align-items-center.justify-content-center {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.d-flex.align-items-center.justify-content-center:hover {
+  transform: scale(0.8);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+} */
